--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
+  "type": "module",
   "devDependencies": {
     "nodemon": "^2.0.22"
   },
   "scripts": {
-    "start": "node ./index.js"
+    "start": "node ./index.js",
+    "start:dev": "nodemon index.js"
+  },
+  "dependencies": {
+    "commander": "^10.0.1",
+    "nanoid": "^4.0.2"
   }
 }
